Add ekt_enable call to determine when we are ready to admit we are connected to other components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,9 @@
 #
 
 cmake_minimum_required (VERSION 3.9)
-project (ekt VERSION 0.0.1 LANGUAGES C)
+project (ekt VERSION 0.0.2 LANGUAGES C)
+
+cmake_policy(SET CMP0074 NEW)
 
 include(GNUInstallDirs)
 include(ExternalProject)
